@@ -48,6 +48,10 @@ char *kde_menudir = NULL;
 char *kde_icondir = NULL;
 char *kde_mini_icondir = NULL;
 
+char *merge_merge_dir = NULL;
+int merge_main_dir_len = 0;
+char *merge_main_dir = NULL;
+
 static int
 menu_age_timeout(gpointer data)
 {
@@ -144,6 +148,31 @@ find_kde_directory(void)
 }
 
 static void
+setup_merge_directory(void)
+{
+	int len;
+
+	merge_main_dir = gnome_datadir_file("gnome/apps/");
+	merge_main_dir_len = merge_main_dir != NULL ? strlen (merge_main_dir) : 0;
+	merge_merge_dir = gnome_config_get_string("/panel/Merge/Directory=/etc/X11/applnk/");
+
+	if (merge_merge_dir == NULL ||
+	    merge_merge_dir[0] == '\0' ||
+	    ! g_file_test(merge_merge_dir, G_FILE_TEST_ISDIR)) {
+		g_free(merge_merge_dir);
+		merge_merge_dir = NULL;
+		return;
+	}
+
+	len = strlen(merge_merge_dir);
+	if (merge_merge_dir[len-1] != '/') {
+		char *tmp = g_strconcat(merge_merge_dir, "/", NULL);
+		g_free(merge_merge_dir);
+		merge_merge_dir = tmp;
+	}
+}
+
+static void
 setup_visuals (void)
 {
 	gdk_rgb_init ();
@@ -195,6 +224,8 @@ main(int argc, char **argv)
 		break;
 	}
 	}
+
+	setup_merge_directory();
 
 	find_kde_directory();
 
