@@ -1,3 +1,9 @@
+Fri Aug 11 13:58:20 2000  George Lebl <jirka@5z.com>
+
+	* main.c, menu.c, menu-fentry.[ch]: add menu merging ala redhat.
+	  (from /etc/X11/applnk/).  This was a very long time in coming to
+	  prevent ugly distribution specific patches.
+
 2000-08-10  Dan Mueth <d-mueth@uchicago.edu>
 
 	* help/C/figures/example_menu.png: fixed screenshot
